# quant-trading

./: .dockerignore  Dockerfile  FOLDER_STRUCTURE.md  GUIA_TRADING_CUANTITATIVO.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh
.claude/: settings.local.json
accelerator/01_notebooks/: 01_variables.ipynb  01_variables.py  01_variables_es.ipynb  01_variables_es.py  02_arrays.ipynb  02_arrays.py  02_arrays_es.ipynb  02_arrays_es.py  03_vectorization.ipynb  03_vectorization.py  03_vectorization_es.ipynb  03_vectorization_es.py  04_time_series.ipynb  04_time_series.py  04_time_series_es.ipynb  04_time_series_es.py  05_statistical_edge.ipynb  05_statistical_edge.py  05_statistical_edge_es.ipynb  05_statistical_edge_es.py  06_classification.ipynb  06_classification.py  06_classification_es.ipynb  06_classification_es.py  07_cross_validation.ipynb  07_cross_validation.py  07_cross_validation_es.ipynb  07_cross_validation_es.py  08_strategy_logic.ipynb  08_strategy_logic.py  08_strategy_logic_es.ipynb  08_strategy_logic_es.py
accelerator/02_strategy/: 01-ml_model_pytorch.ipynb  01-ml_model_pytorch_es.ipynb  02-strategy_development.ipynb  02-strategy_development_es.ipynb  03-implementation.ipynb  03-implementation_es.ipynb  translate_notebook.py
docs/: getting-started.md  index.md
docs/api/: backtest.md  config.md  engineering.md  models.md  utils.md
src/: __init__.py
src/connectors/: __init__.py  base.py  binance.py  bybit.py  coinbase.py  kraken.py  okx.py
src/quant_research/: __init__.py  config.py
src/quant_research/backtest/: __init__.py  engine.py  performance.py
src/quant_research/engineering/: __init__.py  analysis.py  loaders.py  processors.py
src/quant_research/models/: __init__.py  architectures.py  inference.py  inspection.py  trainer.py  validation.py
src/quant_research/utils/: __init__.py  common.py  plotting.py
src/utils/: convert_to_notebooks.py
tests/: __init__.py  test_backtest.py  test_connectors.py  test_models.py
