[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research"
version = "1.0.0"
description = "Quantitative trading research library for ML-based trading strategies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["trading", "quantitative-finance", "machine-learning", "pytorch", "backtesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "altair>=5.0.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/memlabs-research/build-a-quant-trading-strategy"
Repository = "https://github.com/memlabs-research/build-a-quant-trading-strategy"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quant_research*", "connectors*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
