[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research"
version = "1.0.0"
description = "Quantitative trading research library for ML-based trading strategies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["trading", "quantitative-finance", "machine-learning", "pytorch", "backtesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "polars>=1.0.0",
    "numpy>=2.0.0",
    "torch>=2.4.0",
    "altair>=5.4.0",
    "vegafusion[embed]>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=7.0.0",
    "jupyterlab>=4.2.0",
    "nbformat>=5.10.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["quant_research*", "connectors*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
